# sandra.sentinel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  manifest.json  manifest.old.json  manifest_patria.json  manifest_unic.json  mapping_existente.json  nomina_2026.json  package-lock.json  resumen-procesos.toml  sandra-reconciler  sandra-sentinel
.agent/skills/: sentinel-migracion.md
.agent/skills/pace_kernel_migration/: SKILL.md  dominio_negocio.md  dynamic_schema.md  motor_calculo.md  requerimientos_funcionales.md
.agent/skills/protocolo_base/: SKILL.md
.github/workflows/: release.yml
.skill/: pensiones_calculos.md  skill.json
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: conciliacion.rs  conciliate.rs  mod.rs  patria.rs  reconcile_stream.rs  start.rs  validar.rs  version.rs
core/: Cargo.toml  build.rs
core/examples/: boot.rs
core/proto/: sentinel_service.proto
core/src/: lib.rs
core/src/banco/: banfanb.rs  bicentenario.rs  loki.rs  mod.rs  tipos.rs  venezuela.rs
core/src/calc/: calculos.rs  mod.rs  motor.rs
core/src/kernel/: mod.rs
core/src/kernel/logica/: cargador.rs  exportador.rs  logger.rs  memoria.rs  mod.rs  telemetria.rs
core/src/model/: beneficiario.rs  componente.rs  grado.rs  manifiesto.rs  mod.rs
core/src/nomina/: concepto.rs  mod.rs
core/src/sandra-conciliate/: Cargo.toml
core/src/sandra-conciliate/src/: cli.rs  lib.rs  main.rs
core/src/sandra-conciliate/src/core/: keys.rs
core/src/sandra-conciliate/src/io/: mod.rs
core/src/scf/: Cargo.toml
core/src/scf/src/: error.rs  main.rs
core/src/scf/src/core/: comparator.rs  mod.rs
core/src/scf/src/report/: mod.rs
core/src/system/: config.rs
core/src/tipos/: mod.rs
core/src/util/: archivo.rs  mod.rs  seguridad.rs  texto.rs
docs/: OPTIMIZACIONES.md  RELEASE.md  arquitectura_secuencia.md  tecnico.md
docs/anexos/: calculos_nomina.mmd  distribucion_garantias.mmd  flujo_principal.mmd  hash_join.mmd  secuencia_calculos.mmd
man/: install-man.sh  sandra-conciliate.1  sandra-reconciler.1  sandra-sentinel.1  sandra.7
reconciler/: Cargo.toml
reconciler/examples/: mapping_existente.json
reconciler/src/: cli.rs  error.rs  lib.rs  main.rs  types.rs
reconciler/src/compare/: mapping.rs  mod.rs  traits.rs
reconciler/src/csv/: index.rs  reader.rs
reconciler/src/output/: compress.rs  correctos.rs  detalle.rs  errores.rs  indice.rs  manifest.rs  metrics.rs  mod.rs  nuevos.rs  pendientes.rs  postgres.rs  postgres_insert.rs  rechazos.rs  staging_script.rs
schema/: README.md  config.json  diagrama-actividad.md  diagrama-secuencia.md  ley.negro.primero.txt  manifest_nfcp.json  manifest_nrcp.json
target.old/: .rustc_info.json
target.old/debug/: libsandra_core.d  libscf.d  sandra-sentinel.d  sandra_cli.d  scf.d
target.old/debug/.fingerprint/adler2-8d30870c757a0ff3/: lib-adler2  lib-adler2.json
target.old/debug/.fingerprint/adler2-991ae8cb7ef23d47/: lib-adler2  lib-adler2.json
target.old/debug/.fingerprint/adler2-a4ecb85a65449cd7/: lib-adler2  lib-adler2.json
target.old/debug/.fingerprint/adler2-b3c575a86fdd8b0f/: lib-adler2  lib-adler2.json
target.old/debug/examples/: boot  boot-3575cdec878733cb.d  boot-5596408f51894ec8.d  boot-6f604eda66a26a4d.d  boot-9869b350ea0b1718.d  boot-9f517824930eec10.d  boot-b28305df71c0a171.d  boot-f023679cf0445da5.d  boot.d
target.old/flycheck0/: stdout
target.old/release/: libsandra_core.d  libscf.d  libscf.rlib  sandra-sentinel.d  sandra_cli.d  scf.d
(+4673 files in other folders)
