[package]
name = "sandra_sentinel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sandra-sentinel"
path = "src/main.rs"

[dependencies]
sandra_core = { path = "../core" }
scf = { path = "../core/src/scf" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
zstd = "0.13"
