[package]
name = "reconciler"
version = "1.0.0"
edition = "2021"

[dependencies]
sandra_core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
zstd = "0.13"
rayon = "1.10"
memmap2 = "0.9"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

[lib]
name = "reconciler"
path = "src/lib.rs"

[[bin]]
name = "sandra-reconciler"
path = "src/main.rs"
