[package]
name = "sandra-conciliate"
version = "1.0.0"
edition = "2021"
description = "Sandra Conciliate - Comparador de archivos CSV"
authors = ["Carlos Peña"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
rayon = "1.10"
indicatif = "0.18"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "sandra-conciliate"
path = "src/main.rs"

[lib]
name = "sandra_conciliate"
path = "src/lib.rs"
